# grandchase

./: BUILD_SUMMARY.md  CMakeLists.txt  Macros.props  Season V EP2 Server.sln  Solution.sln
Client/: CMakeLists.txt  HwidLib.lib  KSingleton.h
Client/CNTEST/Game.tlog/: CL.command.1.tlog  Game.lastbuildstate
Client/GCDeviceLib/: GCDeviceLib.vcxproj
Client/GCDeviceLib/Debug_NotUnitedBuild/GCDeviceLib.tlog/: GCDeviceLib.lastbuildstate
Client/GCFileDiff/: GCFileDiff.vcxproj
Client/GCLuaManager/: GCLuaManager.vcxproj
Client/GCLuaManager/Debug_NotUnitedBuild/: GCLuaManager.idb
Client/GCLuaManager/Debug_NotUnitedBuild/GCLuaManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Client/GCUtil/: GCElapsedTime.cpp  GCFileMoniter.h  GCUtil.vcxproj  KncUtil.cpp  KncUtil.h  d3dx9.h
Client/GCUtil/Debug_NotUnitedBuild/GCUtil.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Client/GC_MapTOol/: WOGMapTOol.vcxproj
Client/GamePatcher/: CMakeLists.txt
Client/HwidLib/HwidLib/: HwidLib.vcxproj
Client/KncP2PLib/: KncP2P.vcxproj  KncUtil.h
Client/KncP2PLib/Debug_NotUnitedBuild/KncP2PLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Client/Kom/: kom.cpp  kom.h
Client/MFCMassFile/: MFCMassFile.vcxproj
Client/MassFileLib/: MassFileLib.vcxproj
Client/MassFileLib/Debug_Tool/MassFileLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MassFileLib.lastbuildstate
Client/NewPatcher/: CMakeLists.txt  DSetup.h  GCDownLoadDlg.cpp  GCGridPatcherDlg.cpp  GCGridPatcherDlg.h  GCPatcher.cpp  GCPatcher.vcxproj  GCPatcherDlg.cpp  GCPatcherDlg.h  GCServerDlg.cpp  KGCStringLoader.cpp  KGCStringLoader.h  NetError_def_br.h  NetError_def_br_old.h  define.h  globalfunction.cpp  libboost_date_time-vc141-mt-s-x32-1_67.lib
Client/NewPatcher/Thread/: Locker.h
Client/Tool_Particle/: Tool_Particle.vcxproj
Client/UI Script Studio/: UI Script Studio.vcxproj
Client/UILib/: UILib.vcxproj
CommonFiles/: CommonPacket.cpp  CommonPacket.h
Libs/ExternalLib/: EventDefines.h
Libs/ExternalLib/Boost/boost_1_67_0/stage/lib/: libboost_chrono-vc141-mt-s-x32-1_67.lib  libboost_signals-vc141-mt-s-x32-1_67.lib  libboost_system-vc141-mt-s-x32-1_67.lib  libboost_thread-vc141-mt-s-x32-1_67.lib
Libs/ExternalLib/Serializer/: RTTI.h  SerBuffer.h  Serializer.h  ToString.h
Libs/ExternalLib/Thread/: KThread.h  Locker.h
Server/: CMakeLists.txt  OtherServers.cmake
Server/AgentServer/: AGDBThread.cpp  AGSlave.cpp  Agent.cpp  AgentServer.vcxproj  AgitManager.cpp  CMakeLists.txt  SwitchUserSID.cpp
Server/Common/: Actor.h  BaseServer.h  Event.h  EventDefines.h  ImportKncDebug.h  ImportKncLua.h  ImportKncSecurity.h  ImportKncSerializer.h  KLuaManager.h  KNCSingleton.h  KSerializer.h  KThread.h  KncLua.h  KncUtil.cpp  KncUtil.h  LogManager.cpp  NetError_def.h  Performer.h  RTTI.H  StringTable.h  ThreadManager.cpp  ThreadManager.h  ToString.h  dbg.hpp
Server/Common/KncSecurity/: KncSecurity.h
Server/Common/Lua/: lauxlib.h  lua.h  lualib.h
Server/Common/ObjectPool/: BlockAllocator.h
Server/Common/Serializer/: SerBuffer.h
Server/Common/Socket/: Session.h  SocketObject.h
Server/Common/Thread/: Locker.h  Thread.h
Server/Common/UI/: EditStreamBufStub.h  ServerUIDlg.cpp  ServerUIDlg.h  SubclassWnd.cpp  SubclassWnd.h  resource.h
Server/Common/boost/: enable_shared_from_this.hpp  format.hpp  noncopyable.hpp  shared_ptr.hpp  tokenizer.hpp  utility.hpp  weak_ptr.hpp
Server/Common/log4cxx/: basicconfigurator.h  logger.h  logmanager.h  propertyconfigurator.h
Server/Common/log4cxx/helpers/: exception.h
Server/GCServerManager_Battle/: GCServerManager.vcxproj
Server/GameClient/: CMakeLists.txt  GameClient.vcxproj
Server/GameServer/: CMakeLists.txt
Server/UnitTest/: UnitTest.vcxproj
Server/WCenterServer/: CMakeLists.txt  WCenterServer.vcxproj
Server/WGameServer/: CMakeLists.txt
Server/WMsgRouter/: WMsgRouter.vcxproj
Server/WTCPRelay/: WTRServer.vcxproj
Server/WUDPRelay/: WUDPRelay.vcxproj
cmake/: ExternalLibs.cmake  StubHeaders.cmake
